data/derived/comb/progs/unify/prog3143.ml.out
Characters 29-37:
  wwhile (f b <> b,b);;
          ^^^^^^^^
Error: This expression has type bool but an expression was expected of type
         'a -> 'a * bool
